<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">GameDroid</string>
    <string name="library_title">Game library</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- UI strings -->
    <string name="dialog_direrror_title">Error accessing file system</string>
    <string name="dialog_direrror_message">GameDroid was unable to access your device\'s file system (required to load and save games) and must exit</string>
    <string name="dialog_romcache_message">Searching for ROMs&#8230;</string>
    <string name="dialog_noroms_title">No game ROM files found</string>
    <string name="dialog_noroms_message">GameDroid was unable to locate any ROM (.gb/.gbc) files. Move your ROMs to %s</string>
    <string name="dialog_load_state_title">Load saved state?</string>
    <string name="dialog_save_state_title">Save game state?</string>
    <string name="dialog_resume_state_message">GameDroid has detected a previously saved state for this game. Do you want to resume from the saved state?</string>
    <string name="dialog_paused_title">Game Paused</string>
    <string name="dialog_resume_button">Resume</string>
    <string name="dialog_save_state_overwrite_message">A saved state already exists for this game. Do you want to overwrite it?</string>
    <string name="dialog_load_state_message">Do you want to load the previously saved state? Any unsaved progress will be lost.</string>
    <string name="dialog_exit_title">Exit game?</string>
    <string name="dialog_exit_message">Are you sure you want to stop playing? Any unsaved progress will be lost.</string>
    <string name="dialog_delete_save_title">Delete saved game?</string>
    <string name="dialog_delete_save_message">Are you sure you want to delete the saved game? Any in-game progress will be lost.</string>
    <string name="dialog_delete_state_title">Delete saved game state?</string>
    <string name="dialog_delete_state_message">Are you sure you want to delete the saved game state? You will not be able to resume the game from the state.</string>
    <string name="dialog_delete_rom_title">Delete game ROM file?</string>
    <string name="dialog_delete_rom_message">Are you sure you want to delete the game ROM file? The game and any associated data will be removed from your device.</string>
    <string name="delete_save">Delete save</string>
    <string name="delete_state">Delete state</string>
    <string name="delete_rom">Delete ROM file</string>
    <string name="rom_title_format">%1$s (v%2$.1f)</string>
    <string name="rom_licensee_format">Published by %s</string>
    <string name="rom_region_format">Region: %s</string>
    <string name="rom_path_format">Path: %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_hint">Search ROM titles&#8230;</string>
    <string name="dialog_load_error_title">Error loading ROM file</string>
    <string name="rom_date_format">"Last played: %s"</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="select">Select</string>
    <string name="start">Start</string>
    <string name="game_load_error">Could not load saved game: %s</string>
    <string name="game_save_error">Could not save game: %s</string>
    <string name="state_save_error">Could not save state: %s</string>
    <string name="state_load_error">Could not load state: %s</string>
    <string name="state_saved">State saved</string>
    <string name="state_loaded">State loaded</string>

    <!-- Internal strings -->
    <string name="path_roms">GameDroid/ROMs</string>
    <string name="path_saves">GameDroid/Saves</string>
    <string name="path_states">GameDroid/States</string>

    <!-- Preference strings -->
    <string name="emulator_prefs">Emulation options</string>
    <string name="emulator_prefs_desc">Adjust emulation parameters</string>
    <string name="pref_scaling_title">Display scaling</string>
    <string name="pref_scaling_dialog_title">Set emulated display scale</string>
    <string name="pref_scaling_key">pref_scaling</string>
    <string-array name="pref_scaling_entries">
        <item>1x</item>
        <item>1.5x</item>
        <item>1.75x</item>
        <item>Fit to screen</item>
    </string-array>
    <string name="pref_scaling_1x">1</string>
    <string name="pref_scaling_1_5x">1.5</string>
    <string name="pref_scaling_1_75x">1.75</string>
    <string name="pref_scaling_fit">-1</string>
    <string-array name="pref_scaling_values">
        <item>@string/pref_scaling_1x</item>
        <item>@string/pref_scaling_1_5x</item>
        <item>@string/pref_scaling_1_75x</item>
        <item>@string/pref_scaling_fit</item>
    </string-array>
    <string name="pref_fps_key">pref_fps</string>
    <string name="pref_fps_title">Frame rate</string>
    <string name="pref_fps_dialog_title">Set frame rate limit</string>
    <string name="pref_fps_60">60</string>
    <string name="pref_fps_unlimited">-1</string>
    <string-array name="pref_fps_entries">
        <!-- Not entirely accurate, but the focus of this project is primarily software design -->
        <item>60 fps</item>
        <item>Unlimited</item>
    </string-array>
    <string-array name="pref_fps_values">
        <item>@string/pref_fps_60</item>
        <item>@string/pref_fps_unlimited</item>
    </string-array>
    <string name="pref_button_invert_key">pref_button_invert</string>
    <string name="pref_button_invert_title">Invert A and B buttons</string>

    <!-- Help menu strings -->
    <string name="application_help">Application help</string>
    <string name="library_tab_help">Library tab organization</string>
    <string name="emulator_help">Emulator actions</string>
    <string name="help_button_info">Displays this help information screen</string>
    <string name="search_button_info">Displays the ROM search screen</string>
    <string name="settings_button_info">Displays the settings menu</string>
    <string name="recent_tab">\"Recent\" tab</string>
    <string name="fav_tab">\"Favorite\" tab</string>
    <string name="all_tab">\"All\" tab</string>
    <string name="recent_tab_info">Displays ROMs in order of most recently played</string>
    <string name="fav_tab_info">Displays ROMs that have been marked as favorites</string>
    <string name="all_tab_info">Displays all ROMs in alphabetical order</string>
    <string name="save_btn">Save state</string>
    <string name="load_btn">Load state</string>
    <string name="rewind_btn">Rewind</string>
    <string name="save_info">Saves the current state of the emulator</string>
    <string name="load_info">Loads the last saved state of the emulator</string>
    <string name="rewind_info">Rewinds game actions while pressed</string>

    <!-- About screen strings -->
    <string name="about_title">About GameDroid</string>
    <string name="about_desc">View application information</string>
    <string name="app_version_format">v%s</string>
    <string name="about_team_header">Team CreativeName 2016:</string>
    <string name="about_team">Matt Penny\nAlan Wu\nHammad Asad\nBrendan Marko\n\nMade for COMP 3004 at Carleton University</string>
</resources>
