<?xml version="1.0" encoding="utf-8"?>

<!-- User-configurable preferences -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_scaling_key"
        android:title="@string/pref_scaling_title"
        android:dialogTitle="@string/pref_scaling_dialog_title"
        android:summary="%s"
        android:entries="@array/pref_scaling_entries"
        android:entryValues="@array/pref_scaling_values"
        android:defaultValue="@string/pref_scaling_1_5x" />
    <ListPreference
        android:key="@string/pref_fps_key"
        android:title="@string/pref_fps_title"
        android:dialogTitle="@string/pref_fps_dialog_title"
        android:summary="%s"
        android:entries="@array/pref_fps_entries"
        android:entryValues="@array/pref_fps_values"
        android:defaultValue="@string/pref_fps_60" />
    <CheckBoxPreference
        android:key="@string/pref_button_invert_key"
        android:title="@string/pref_button_invert_title"
        android:defaultValue="false" />

</PreferenceScreen>