<?xml version="1.0" encoding="utf-8"?>

<!-- Top-level preference headers -->
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:title="@string/emulator_prefs"
        android:summary="@string/emulator_prefs_desc">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="creativename.gamedroid"
            android:targetClass="creativename.gamedroid.ui.EmulationOptionsActivity" />
    </header>

    <header
        android:title="@string/about"
        android:summary="@string/about_desc">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="creativename.gamedroid"
            android:targetClass="creativename.gamedroid.ui.AboutActivity" />
    </header>
</preference-headers>