<?xml version="1.0" encoding="utf-8"?>

<!-- A help screen for new users -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:showDividers="middle">

        <!-- General application help -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_help"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/emu_button"/>

        <!-- Help -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">
                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:src="@android:drawable/ic_menu_help"
                    android:layout_weight="4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/help"
                    android:layout_weight="4"
                    android:textColor="@color/emu_button"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/help_button_info"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_padding_top"/>

        <!-- Search -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">
                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:src="@android:drawable/ic_menu_search"
                    android:layout_weight="4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/search"
                    android:layout_weight="4"
                    android:textColor="@color/emu_button"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/search_button_info"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_padding_top"/>

        <!-- Settings -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">
                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:src="@android:drawable/ic_menu_preferences"
                    android:layout_weight="4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settings"
                    android:gravity="center"
                    android:layout_weight="4"
                    android:textColor="@color/emu_button"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settings_button_info"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <!-- Library tab help -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_tab_help"
            android:textSize="20sp"
            android:paddingTop="25dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textColor="@color/emu_button"/>

        <!-- Recent -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recent_tab"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/emu_button"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recent_tab_info"
                android:layout_weight="1"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <!-- Favorite -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fav_tab"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/emu_button"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fav_tab_info"
                android:layout_weight="1"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <!-- All -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/all_tab"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/emu_button"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/all_tab_info"
                android:layout_weight="1"/>
        </LinearLayout>


        <!-- Emulator help -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emulator_help"
            android:textSize="20sp"
            android:paddingTop="25dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textColor="@color/emu_button"/>

        <!-- Save state -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">
                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:src="@drawable/gb_button_save"
                    android:layout_weight="4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/save_btn"
                    android:gravity="center"
                    android:layout_weight="4"
                    android:textColor="@color/emu_button"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/save_info"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_padding_top"/>

        <!-- Load state -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">
                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:src="@drawable/gb_button_load"
                    android:layout_weight="4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/load_btn"
                    android:gravity="center"
                    android:layout_weight="4"
                    android:textColor="@color/emu_button"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/load_info"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_padding_top"/>

        <!-- Rewind -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">
                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:src="@drawable/gb_button_rewind"
                    android:layout_weight="4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rewind_btn"
                    android:gravity="center"
                    android:layout_weight="4"
                    android:textColor="@color/emu_button"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rewind_info"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>